--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,33 +1,34 @@
-name: Upload Python Package to PyPI when a Release is Created
+name: Publish to PyPI
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - 'v*'  # Trigger on version tags like v1.0.0
 
 jobs:
-  pypi-publish:
-    name: Publish release to PyPI
+  publish:
     runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/st-gsheets-connection
-    permissions:
-      id-token: write
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: '3.12'  # Specify your Python version
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel
+          pip install setuptools wheel twine
+
       - name: Build package
         run: |
           python setup.py sdist bdist_wheel
-      - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_TOKEN }}  # Ensure PYPI_TOKEN is correctly set in repository secrets
+
+      - name: Publish to PyPI
+        env:
+          TWINE_USERNAME: __token__  # Use the token authentication
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          twine upload dist/*
